renamed intersectionPoints_for_neigbourhood.py as deltaNeigbourhood added makeRoundCap(hcycle, point, delta) put shift(seq, shift=1) in constructions.py few changes to test_code_drawing.ipynb

--- a/test_code_drawing.ipynb
+++ b/test_code_drawing.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ca08a0c6",
+   "metadata": {},
+   "source": [
+    "original code found on https://pypi.org/project/drawSvg/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2e77d643",
    "metadata": {},
    "source": [
@@ -10,17 +18,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "388d6c6d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7ea46eac4eb9474f856b6722a852ec3c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "DrawingWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import drawSvg as draw\n",
     "from drawSvg.widgets import DrawingWidget\n",
-    "from hyperbolic import euclid, util\n",
     "from hyperbolic.poincare.shapes import *\n",
-    "from hyperbolic.poincare import Transform\n",
-    "import hyperbolic.poincare.shapes as hyper  # pip3 install hyperbolic\n",
+    "from constructions import shift\n",
     "\n",
     "delta=0.3\n",
     "click_list=[]\n",
@@ -37,37 +58,36 @@
     "\n",
     "def draw_delta_neigbourhood_twosides(points,delta):\n",
     "    for i,x in enumerate(points):\n",
-    "        p1=hyper.Point.fromEuclid(x[0],x[1])\n",
-    "        g.draw(hyper.Circle.fromCenterRadius(p1, delta), fill='green',fill_opacity=1)\n",
+    "        p1=Point.fromEuclid(x[0],x[1])\n",
+    "        g.draw(Circle.fromCenterRadius(p1, delta), fill='green',fill_opacity=1)\n",
     "        for y in points[i+1:]:\n",
     "            if i==0:\n",
-    "                p2=hyper.Point.fromEuclid(y[0],y[1])\n",
-    "                line = hyper.Line.fromPoints(*p1, *p2, segment=True)\n",
+    "                p2=Point.fromEuclid(y[0],y[1])\n",
+    "                line = Line.fromPoints(*p1, *p2, segment=True)\n",
     "                g.draw(line, hwidth=2*delta, fill='green',fill_opacity=1)\n",
     "                \n",
     "def draw_thin_triangle(points):\n",
     "    for i,x in enumerate(points):\n",
     "        for y in points[i+1:]:\n",
-    "            p1=hyper.Point.fromEuclid(x[0],x[1])\n",
-    "            p2=hyper.Point.fromEuclid(y[0],y[1])\n",
+    "            p1=Point.fromEuclid(x[0],x[1])\n",
+    "            p2=Point.fromEuclid(y[0],y[1])\n",
     "            line=Line.fromPoints(*p1,*p2,segment=True)\n",
     "            g.draw(line, **lineStyle2)\n",
+    "\n",
     "def draw_thick_line(points):\n",
     "    for i,x in enumerate(points):\n",
     "        for y in points[i+1:]:\n",
-    "            p1=hyper.Point.fromEuclid(x[0],x[1])\n",
-    "            p2=hyper.Point.fromEuclid(y[0],y[1])\n",
-    "            line=hyper.Line.fromPoints(*p1,*p2,segment=True)\n",
+    "            p1=Point.fromEuclid(x[0],x[1])\n",
+    "            p2=Point.fromEuclid(y[0],y[1])\n",
+    "            line=Line.fromPoints(*p1,*p2,segment=True)\n",
     "            g.draw(line, hwidth=0.4,fill='red')\n",
     "    \n",
     "def redraw_Mousepoint(points):\n",
     "    for i,x in enumerate(points):\n",
-    "        p=hyper.Point.fromEuclid(x[0],x[1])\n",
-    "        g.draw(hyper.Circle.fromCenterRadius(p,0.02),fill='white')\n",
+    "        p=Point.fromEuclid(x[0],x[1])\n",
+    "        g.draw(Circle.fromCenterRadius(p,0.02),fill='white')\n",
     "        \n",
-    "def shift(seq, shift=1):\n",
-    "    perm=shift%3 \n",
-    "    return seq[-perm:] + seq[:-perm]\n",
+    "\n",
     "\n",
     "clicks=0\n",
     "        \n",
@@ -101,7 +121,7 @@
     "    widget.refresh()\n",
     "    \n",
     "draw_thick_line([(0.5,0.4),(-0.2,-0.3)])\n",
-    "widget"
+    "widget\n"
    ]
   },
   {
@@ -128,15 +148,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'Triangle.Triangle'>\n",
       "False\n"
      ]
     },
     {
      "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.1 -1.1 2.2 2.2\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"orange\" stroke-width=\"0.01\" stroke=\"black\" />\n<circle cx=\"-0.699125364795622\" cy=\"0.09987505211366045\" r=\"0.025010398445719784\" fill=\"#eee\" />\n<text x=\"-0.7\" y=\"0.1\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"0.6991253647956222\" cy=\"-0.09987505211366031\" r=\"0.025010398445719784\" fill=\"#eee\" />\n<text x=\"0.7\" y=\"-0.1\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"-0.29958772348815765\" cy=\"-0.5991754469763153\" r=\"0.027508001223681466\" fill=\"#eee\" />\n<text x=\"-0.3\" y=\"-0.6\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n<path d=\"M0.6994893809782088,-0.10371494891224131 A66.67166659166647,66.67166659166647,0,0,0,-0.7005499914345155,0.09629067571815142 A0.3535533905932737,0.3535533905932737,0,0,1,-0.6994893809799372,0.10371494891250033 A66.6716665916699,66.6716665916699,0,0,0,0.7005499914345048,-0.096290675718123 A0.3535533905932739,0.3535533905932739,0,0,1,0.6994893809799412,-0.10371494891247027 Z\" />\n<path d=\"M-0.989949493661166,0.14142135623730945 A1.6291881927933909,1.6291881927933909,0,0,1,0.9899494936611664,-0.14142135623730945 A1.6813495924307065,1.6813495924307065,0,0,0,-0.9899494936611666,0.14142135623731011 Z\" fill=\"green\" />\n<path d=\"M-0.9899494936611665,0.14142135623731011 A1.681349592430708,1.681349592430708,0,0,0,0.9899494936611667,-0.14142135623730923 A1.6291881927933922,1.6291881927933922,0,0,1,-0.9899494936611668,0.1414213562373099 Z\" fill=\"red\" />\n<circle cx=\"0.005643082796069149\" cy=\"-0.3397185833472096\" r=\"0.015\" fill=\"blue\" />\n<circle cx=\"-0.38849625713596525\" cy=\"-0.24652951478599938\" r=\"0.015\" fill=\"blue\" />\n<path d=\"M-0.30307979828945797,-0.5972476790287111 A1.4997384766673576,1.4997384766673576,0,0,0,0.6996794094382451,-0.09625924412135478 A0.36333424398642317,0.36333424398642317,0,0,1,0.7003583035227914,-0.1037281239488961 A1.5703883321591317,1.5703883321591317,0,0,1,-0.29695523074013674,-0.602774582937954 A0.42541656578802384,0.42541656578802384,0,0,1,-0.30307979828945836,-0.5972476790287116 Z\" />\n<path d=\"M0.99482070364378,-0.10164530290030438 A0.8861967119615272,0.8861967119615272,0,0,1,-0.49449856834695577,-0.8691784430730038 A0.8938224216714632,0.8938224216714632,0,0,0,0.99482070364378,-0.10164530290030427 Z\" fill=\"green\" />\n<path d=\"M0.9948207036437609,-0.1016453029003177 A14.138241845102675,14.138241845102675,0,0,0,-0.49449856834693406,-0.8691784430729932 A10.081902792453365,10.081902792453365,0,0,1,0.9948207036437724,-0.1016453029003106 Z\" fill=\"red\" />\n<circle cx=\"-0.07118467448412408\" cy=\"0.010169239212017844\" r=\"0.015\" fill=\"blue\" />\n<circle cx=\"-0.37024850460250036\" cy=\"-0.28598794726245924\" r=\"0.015\" fill=\"blue\" />\n<path d=\"M-0.6980040727139929,0.10318422992354581 A0.8506621040688818,0.8506621040688818,0,0,0,-0.29586681874222465,-0.5998850213820234 A0.46608930768300266,0.46608930768300266,0,0,1,-0.3041122665112739,-0.6001508287014412 A0.8729376836256961,0.8729376836256961,0,0,1,-0.7020178303411839,0.09684896811506094 A0.3877015604817706,0.3877015604817706,0,0,1,-0.6980040727139931,0.10318422992354595 Z\" />\n<path d=\"M-0.3559944989587951,-0.934488050598335 A0.6535444943477572,0.6535444943477572,0,0,1,-0.9768664399251732,0.21385031809169186 A0.6545188671412278,0.6545188671412278,0,0,0,-0.35599449895879515,-0.9344880505983351 Z\" fill=\"green\" />\n<path d=\"M-0.3559944989587964,-0.934488050598334 A2.9557882899016046,2.9557882899016046,0,0,1,-0.976866439925173,0.21385031809169042 A3.3056491916476283,3.3056491916476283,0,0,0,-0.3559944989587951,-0.9344880505983341 Z\" fill=\"red\" />\n<circle cx=\"-0.19013615598660072\" cy=\"0.027162307998085833\" r=\"0.015\" fill=\"blue\" />\n<circle cx=\"-0.04821340315228584\" cy=\"-0.3762009382734308\" r=\"0.015\" fill=\"blue\" />\n</svg>",
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.1 -1.1 2.2 2.2\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"orange\" stroke-width=\"0.01\" stroke=\"black\" />\n<path d=\"M0.7330779017541573,-0.3607077384332058 A0.05287155574226961,0.05287155574226961,0,0,0,0.6768012044459326,-0.446676146962603\" fill=\"red\" fill-opacity=\"1\" />\n<path d=\"M-0.2373201722953553,0.6505936865469977 A0.08271182214085718,0.08271182214085718,0,0,1,-0.3730763734566158,0.5618297947819376\" fill=\"red\" fill-opacity=\"1\" />\n<path d=\"M-0.2373201722953553,0.6505936865469977 A58.09792251858208,58.09792251858208,0,0,0,0.7330779017541644,-0.3607077384332129 A0.21748181177982817,0.21748181177982817,0,0,1,0.676801204445932,-0.44667614696260227 A1.7686189867643334,1.7686189867643334,0,0,0,-0.37307637345661626,0.5618297947819374 A0.412803418467905,0.412803418467905,0,0,1,-0.23732017229499303,0.6505936865466292 Z\" fill=\"red\" fill-opacity=\"1\" />\n<path d=\"M-0.3780763104277687,0.6050532154689955 A0.08271182214085579,0.08271182214085579,0,0,0,-0.21540742273346278,0.6098369729288553\" fill=\"red\" fill-opacity=\"1\" />\n<path d=\"M-0.7442976342691392,-0.1494847544043203 A0.07080784319626944,0.07080784319626944,0,0,1,-0.6643502389629463,-0.26281109206303427\" fill=\"red\" fill-opacity=\"1\" />\n<path d=\"M-0.7442976342691392,-0.1494847544043203 A1.4150836066093462,1.4150836066093462,0,0,1,-0.3780763104277687,0.6050532154689956 A0.45351214255770883,0.45351214255770883,0,0,1,-0.21540742273346264,0.6098369729288553 A0.7756163281074402,0.7756163281074402,0,0,0,-0.6643502389629463,-0.26281109206303377 A0.3428203565665093,0.3428203565665093,0,0,1,-0.7442976342691393,-0.14948475440432052 Z\" fill=\"red\" fill-opacity=\"1\" />\n<path d=\"M0.6989173612661825,-0.4023897100691207 A2.5728067611048133,2.5728067611048133,0,0,1,-0.6995008145730861,-0.20348682469541712 A0.32557387997074944,0.32557387997074944,0,0,1,-0.7005376709455626,-0.1965138265909567 A2.3884685455809005,2.3884685455809005,0,0,0,0.7011125254501235,-0.39762098525550105 A0.21789907754182727,0.21789907754182727,0,0,1,0.6989173612661834,-0.4023897100691213 Z\" />\n<path d=\"M-0.2965662057636864,0.602281124302781 A3.6832889165477107,3.6832889165477107,0,0,1,0.7014541987561493,-0.397815911503133 A0.21748181177982817,0.21748181177982817,0,0,1,0.6985711934135628,-0.40220313693346216 A3.316812986488367,3.316812986488367,0,0,0,-0.3034605037636715,0.5977506439073448 A0.412803418467905,0.412803418467905,0,0,1,-0.2965662057636893,0.6022811243027852 Z\" />\n<path d=\"M-0.7020640259836729,-0.19715060283853703 A0.9726533151707375,0.9726533151707375,0,0,1,-0.30411541537668874,0.599929217141803 A0.45351214255770883,0.45351214255770883,0,0,1,-0.2958676546761853,0.6001086777708993 A0.9450783748290328,0.9450783748290328,0,0,0,-0.6979578848677398,-0.2028810435031706 A0.3428203565665093,0.3428203565665093,0,0,1,-0.7020640259836728,-0.19715060283853697 Z\" />\n<circle cx=\"-0.7\" cy=\"-0.2\" r=\"0.025\" fill=\"#eee\" />\n<text x=\"-0.7\" y=\"-0.2\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"0.7\" cy=\"-0.4\" r=\"0.025\" fill=\"#eee\" />\n<text x=\"0.7\" y=\"-0.4\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"-0.3\" cy=\"0.6\" r=\"0.025\" fill=\"#eee\" />\n<text x=\"-0.3\" y=\"0.6\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n</svg>",
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x1c1efea2f70>"
+       "<drawSvg.drawing.Drawing at 0x12b517fb250>"
       ]
      },
      "execution_count": 1,
@@ -146,46 +165,76 @@
    ],
    "source": [
     "import drawSvg as draw\n",
-    "from constructions import deltaLines_of_Line, is_on_Linesegment\n",
+    "from constructions import deltaLines_of_Line, is_on_Linesegment, shift\n",
+    "from deltaNeigbourhood import makeRoundCap\n",
     "from hyperbolic.poincare.shapes import *\n",
     "from Triangle import Triangle\n",
     "\n",
-    "delta=0.7\n",
+    "delta=0.3\n",
     "\n",
     "d = draw.Drawing(2.2, 2.2, origin='center')\n",
-    "\n",
-    "\n",
     "d.setRenderSize(500)\n",
     "d.append(draw.Circle(0, 0, 1, fill='orange',stroke_width=0.01, stroke='black'))\n",
     "\n",
-    "p1=Point.fromEuclid(-0.7,-0.1)\n",
-    "p2=Point.fromEuclid(0.7,0.1)\n",
-    "p3=Point.fromEuclid(-0.3,0.6)\n",
+    "p1=Point.fromEuclid(-0.7,0.2)\n",
+    "p2=Point.fromEuclid(0.7,0.4)\n",
+    "p3=Point.fromEuclid(-0.3,-0.6)\n",
     "PList=[p1,p2,p3]\n",
     "#print(PList)\n",
     "\n",
+    "lineStyle1 = dict(fill='red', fill_opacity=1)\n",
+    "\n",
+    "def deltaNeigbourhood(triangle, delta, edgenumber=0):\n",
+    "    for i,l in enumerate(triangle.edges):\n",
+    "        if i==edgenumber:\n",
+    "            continue\n",
+    "        else:\n",
+    "            d.draw(makeRoundCap(l, triangle.vertices[i], delta), **lineStyle1)\n",
+    "            d.draw(makeRoundCap(l, triangle.vertices[(i+1)%len(triangle.vertices)], delta), **lineStyle1)\n",
+    "            d.draw(l, hwidth=2*delta, **lineStyle1)\n",
+    "\n",
     "Tri=Triangle.fromVertices(PList)\n",
     "deltaTri=Tri.offsetPolygon(delta)\n",
+    "PList=Tri.vertices\n",
     "SList=Tri.edges\n",
+    "\"\"\"\n",
+    "for p,l in zip(PList, SList):\n",
+    "    d.draw(l.makePerpendicular(*p), hwidth=0.03)\n",
+    "    cap = makeRoundCap(l, p,delta)\n",
+    "    d.draw(l, hwidth=2*delta, fill='blue')\n",
+    "    d.draw(cap, hwidth=0.03, fill='blue')\n",
     "\n",
+    "d.draw(deltaTri, stroke_width=0.02, stroke='black', fill='none')\n",
     "\n",
-    "for i,v in enumerate(PList):\n",
-    "    d.draw(v, hradius=0.1, fill='#eee')\n",
-    "    d.draw(draw.Text(str(i), 0.05, *v, center=0.7))\n",
-    "\n",
-    "#d.draw(deltaTri, stroke_width=0.02, stroke='black', fill='none')\n",
-    "\n",
-    "for i,l in enumerate(SList):\n",
+    "for l in SList:\n",
     "    d.draw(l, hwidth=0.03)\n",
     "    d.draw(l.makeOffset(delta),hwidth=0.03, fill='green')\n",
     "    d.draw(l.makeOffset(-delta),hwidth=0.03, fill='red')\n",
+    "\n",
+    "\n",
+    "for i,l in enumerate(SList):\n",
     "    RestList = SList[:i] + SList[i+1:]\n",
-    "    for y in RestList:\n",
+    "    for j,y in enumerate(RestList):\n",
     "        for h in deltaLines_of_Line(l,delta):\n",
     "            ips = y.intersectionsWithHcycle(h)\n",
     "            for p in ips:\n",
+    "                d.draw(p, hradius=0.15, hwidth=0.02, fill='white', opacity=0.6)\n",
     "                if is_on_Linesegment(*p, y):\n",
-    "                    d.draw(p, radius=0.015, fill='blue')\n",
+    "                    d.draw(p, radius=0.01, fill='yellow')\n",
+    "\n",
+    "for i,v in enumerate(PList):\n",
+    "    d.draw(v, radius=0.025, fill='#eee')\n",
+    "    d.draw(draw.Text(str(i), 0.05, *v, center=0.7))\n",
+    "\"\"\"\n",
+    "deltaNeigbourhood(Tri, delta)\n",
+    "\n",
+    "for l in SList:\n",
+    "    d.draw(l, hwidth=0.03)\n",
+    "\n",
+    "for i,v in enumerate(PList):\n",
+    "    d.draw(v, radius=0.025, fill='#eee')\n",
+    "    d.draw(draw.Text(str(i), 0.05, *v, center=0.7))\n",
+    "\n",
     "\n",
     "\n",
     "print(Tri.isCovered(delta))\n",
@@ -193,74 +242,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ca08a0c6",
-   "metadata": {},
-   "source": [
-    "not our own code but something to work with...\n",
-    "\n",
-    "found on https://pypi.org/project/drawSvg/\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5675005",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import drawSvg as draw\n",
-    "from drawSvg.widgets import DrawingWidget\n",
-    "import hyperbolic.poincare.shapes as hyper  # pip3 install hyperbolic\n",
-    "\n",
-    "# Create drawing\n",
-    "d = draw.Drawing(2, 2, origin='center')\n",
-    "d.setRenderSize(500)\n",
-    "d.append(draw.Circle(0, 0, 1, fill='orange'))\n",
-    "group = draw.Group()\n",
-    "d.append(group)\n",
-    "\n",
-    "# Update the drawing based on user input\n",
-    "click_list = []\n",
-    "def redraw(points):\n",
-    "    group.children.clear()\n",
-    "    for x1, y1 in points:\n",
-    "        for x2, y2 in points:\n",
-    "            if (x1, y1) == (x2, y2): continue\n",
-    "            p1 = hyper.Point.fromEuclid(x1, y1)\n",
-    "            p2 = hyper.Point.fromEuclid(x2, y2)\n",
-    "            if p1.distanceTo(p2) <= 1e9:\n",
-    "                line = hyper.Line.fromPoints(*p1, *p2, segment=True)\n",
-    "                group.draw(line, hwidth=0.1, fill='white')\n",
-    "    for x, y in points:\n",
-    "        p = hyper.Point.fromEuclid(x, y)\n",
-    "        group.draw(hyper.Circle.fromCenterRadius(p, 0.05), fill='green')\n",
-    "redraw(click_list)\n",
-    "\n",
-    "# Create interactive widget and register mouse events\n",
-    "widget = DrawingWidget(d)\n",
-    "@widget.mousedown\n",
-    "def mousedown(widget, x, y, info):\n",
-    "        if (x**2 + y**2) ** 0.5 + 1e-5 < 1:\n",
-    "            if len(click_list)<3:\n",
-    "                click_list.append((x, y))\n",
-    "        redraw(click_list)\n",
-    "        widget.refresh()\n",
-    "        \n",
-    "        \n",
-    "@widget.mousemove\n",
-    "def mousemove(widget, x, y, info):\n",
-    "    if (x**2 + y**2) ** 0.5 + 1e-5 < 1:\n",
-    "        if len(click_list)<3:\n",
-    "            redraw(click_list + [(x, y)])\n",
-    "    widget.refresh()\n",
-    "widget"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6110ef6",
+   "id": "0a4eaf39",
    "metadata": {},
    "outputs": [],
    "source": []
