small changes with new tasks

--- a/test_code_drawing.ipynb
+++ b/test_code_drawing.ipynb
@@ -165,7 +165,7 @@
    ],
    "source": [
     "import drawSvg as draw\n",
-    "from constructions import deltaLines_of_Line, is_on_Linesegment, shift\n",
+    "from constructions import deltaLines_of_Line, shift\n",
     "from deltaNeigbourhood import makeRoundCap\n",
     "from hyperbolic.poincare.shapes import *\n",
     "from Triangle import Triangle\n",
@@ -182,6 +182,8 @@
     "PList=[p1,p2,p3]\n",
     "#print(PList)\n",
     "\n",
+    "IdealPoints=[Ideal.fromDegree(i/3*360) for i in range(2)]\n",
+    "\n",
     "lineStyle1 = dict(fill='red', fill_opacity=1)\n",
     "\n",
     "def deltaNeigbourhood(triangle, delta, edgenumber=0):\n",
@@ -194,9 +196,10 @@
     "            d.draw(l, hwidth=2*delta, **lineStyle1)\n",
     "\n",
     "Tri=Triangle.fromVertices(PList)\n",
-    "deltaTri=Tri.offsetPolygon(delta)\n",
     "PList=Tri.vertices\n",
     "SList=Tri.edges\n",
+    "\n",
+    "Tri2=Triangle.fromVertices(IdealPoints)\n",
     "\"\"\"\n",
     "for p,l in zip(PList, SList):\n",
     "    d.draw(l.makePerpendicular(*p), hwidth=0.03)\n",
@@ -228,16 +231,84 @@
     "\"\"\"\n",
     "deltaNeigbourhood(Tri, delta)\n",
     "\n",
-    "for l in SList:\n",
+    "for l in Tri.edges:\n",
     "    d.draw(l, hwidth=0.03)\n",
     "\n",
-    "for i,v in enumerate(PList):\n",
+    "for i,v in enumerate(Tri.vertices):\n",
     "    d.draw(v, radius=0.025, fill='#eee')\n",
     "    d.draw(draw.Text(str(i), 0.05, *v, center=0.7))\n",
     "\n",
     "\n",
     "\n",
     "print(Tri.isCovered(delta))\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e4804a6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Ideal(1.0, 0.0), Ideal(-0.5, 0.866), Ideal(-0.5, -0.866)]\n"
+     ]
+    },
+    {
+     "data": {
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.1 -1.1 2.2 2.2\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"orange\" stroke-width=\"0.01\" stroke=\"black\" />\n<circle cx=\"-0.4999999999999998\" cy=\"-0.8660254037844387\" r=\"0\" fill=\"red\" fill-opacity=\"1\" />\n<circle cx=\"-0.5000000000000004\" cy=\"0.8660254037844385\" r=\"0\" fill=\"red\" fill-opacity=\"1\" />\n<path d=\"M-0.5000000000000009,0.8660254037844377 A3.8314650407604995,3.8314650407604995,0,0,0,-0.5000000000000004,-0.8660254037844386 A1.1853650166111989,1.1853650166111989,0,0,1,-0.5000000000000006,0.8660254037844383 Z\" fill=\"red\" fill-opacity=\"1\" />\n<circle cx=\"-0.5000000000000004\" cy=\"0.8660254037844385\" r=\"0\" fill=\"red\" fill-opacity=\"1\" />\n<circle cx=\"1.0\" cy=\"-0.0\" r=\"0\" fill=\"red\" fill-opacity=\"1\" />\n<path d=\"M0.9999999999999964,8.881784197001252e-16 A3.831465040760519,3.831465040760519,0,0,0,-0.49999999999999867,0.8660254037844366 A1.1853650166112002,1.1853650166112002,0,0,1,1.0000000000000004,2.220446049250313e-16 Z\" fill=\"red\" fill-opacity=\"1\" />\n<path d=\"M-0.5000000000000002,-0.8660254037844393 A1.7784529630289838,1.7784529630289838,0,0,0,1.0000000000000002,2.220446049250313e-16 A1.6883786577052287,1.6883786577052287,0,0,1,-0.4999999999999998,-0.8660254037844388 Z\" />\n<path d=\"M-0.5000000000000004,0.8660254037844383 A1.778452963028983,1.778452963028983,0,0,0,-0.49999999999999956,-0.8660254037844385 A1.6883786577052282,1.6883786577052282,0,0,1,-0.5000000000000007,0.8660254037844385 Z\" />\n<path d=\"M0.9999999999999999,-2.220446049250313e-16 A1.7784529630289878,1.7784529630289878,0,0,0,-0.5000000000000007,0.8660254037844378 A1.6883786577052322,1.6883786577052322,0,0,1,1.0,-0.0 Z\" />\n<circle cx=\"1.0\" cy=\"-0.0\" r=\"0.025\" fill=\"#eee\" />\n<text x=\"1.0\" y=\"-0.0\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"-0.4999999999999998\" cy=\"-0.8660254037844387\" r=\"0.025\" fill=\"#eee\" />\n<text x=\"-0.4999999999999998\" y=\"-0.8660254037844387\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"-0.5000000000000004\" cy=\"0.8660254037844385\" r=\"0.025\" fill=\"#eee\" />\n<text x=\"-0.5000000000000004\" y=\"0.8660254037844385\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n</svg>",
+      "text/plain": [
+       "<drawSvg.drawing.Drawing at 0x194c86953d0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import drawSvg as draw\n",
+    "from constructions import deltaLines_of_Line, shift\n",
+    "from deltaNeigbourhood import makeRoundCap\n",
+    "from hyperbolic.poincare.shapes import *\n",
+    "from Triangle import Triangle\n",
+    "\n",
+    "delta=0.3\n",
+    "\n",
+    "d = draw.Drawing(2.2, 2.2, origin='center')\n",
+    "d.setRenderSize(500)\n",
+    "d.append(draw.Circle(0, 0, 1, fill='orange',stroke_width=0.01, stroke='black'))\n",
+    "\n",
+    "IdealPoints=[Ideal.fromDegree(i/3*360) for i in range(3)]\n",
+    "print(IdealPoints)\n",
+    "lineStyle1 = dict(fill='red', fill_opacity=1)\n",
+    "\n",
+    "def deltaNeigbourhood(triangle, delta, edgenumber=0):\n",
+    "    for i,l in enumerate(triangle.edges):\n",
+    "        if i==edgenumber:\n",
+    "            continue\n",
+    "        else:\n",
+    "            d.draw(makeRoundCap(l, triangle.vertices[i], delta), **lineStyle1)\n",
+    "            d.draw(makeRoundCap(l, triangle.vertices[(i+1)%len(triangle.vertices)], delta), **lineStyle1)\n",
+    "            d.draw(l, hwidth=2*delta, **lineStyle1)\n",
+    "\n",
+    "Tri2=Triangle.fromVertices(IdealPoints)\n",
+    "\n",
+    "deltaNeigbourhood(Tri2, delta)\n",
+    "\n",
+    "for l in Tri2.edges:\n",
+    "    d.draw(l, hwidth=0.03)\n",
+    "\n",
+    "for i,v in enumerate(Tri2.vertices):\n",
+    "    d.draw(v, radius=0.025, fill='#eee')\n",
+    "    d.draw(draw.Text(str(i), 0.05, *v, center=0.7))\n",
+    "\n",
+    "\n",
+    "\n",
+    "#print(Tri2.isCovered(delta))\n",
     "d"
    ]
   },
