acc. improved, comp. implemented in widget

--- a/widget.ipynb
+++ b/widget.ipynb
@@ -18,15 +18,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "388d6c6d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8fc56387ea4d40a7afa404ae1fa45a53",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "DrawingWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import drawSvg as draw\n",
     "from drawSvg.widgets import DrawingWidget\n",
     "from hyperbolic.poincare.shapes import *\n",
-    "from constructions import shift\n",
+    "from constructions import *\n",
+    "from Triangle import *\n",
+    "from deltaNeigbourhood import *\n",
     "\n",
     "delta=0.3\n",
     "click_list=[]\n",
@@ -41,15 +58,7 @@
     "d.append(g)\n",
     "\n",
     "\n",
-    "def draw_delta_neigbourhood_twosides(points,delta):\n",
-    "    for i,x in enumerate(points):\n",
-    "        p1=Point.fromEuclid(x[0],x[1])\n",
-    "        g.draw(Circle.fromCenterRadius(p1, delta), fill='green',fill_opacity=1)\n",
-    "        for y in points[i+1:]:\n",
-    "            if i==0:\n",
-    "                p2=Point.fromEuclid(y[0],y[1])\n",
-    "                line = Line.fromPoints(*p1, *p2, segment=True)\n",
-    "                g.draw(line, hwidth=2*delta, fill='green',fill_opacity=1)\n",
+    "\n",
     "                \n",
     "def draw_thin_triangle(points):\n",
     "    for i,x in enumerate(points):\n",
@@ -71,6 +80,18 @@
     "    for i,x in enumerate(points):\n",
     "        p=Point.fromEuclid(x[0],x[1])\n",
     "        g.draw(Circle.fromCenterRadius(p,0.02),fill='white')\n",
+    "\n",
+    "\n",
+    "\n",
+    "def draw_delta_neigbourhood_twosides(points,delta):\n",
+    "    for i,x in enumerate(points):\n",
+    "        p1=Point.fromEuclid(x[0],x[1])\n",
+    "        g.draw(Circle.fromCenterRadius(p1, delta), fill='green',fill_opacity=1)\n",
+    "        for y in points[i+1:]:\n",
+    "            if i==0:\n",
+    "                p2=Point.fromEuclid(y[0],y[1])\n",
+    "                line = Line.fromPoints(*p1, *p2, segment=True)\n",
+    "                g.draw(line, hwidth=2*delta, fill='green',fill_opacity=1)\n",
     "        \n",
     "\n",
     "\n",
@@ -86,6 +107,15 @@
     "                click_list.append((x, y))\n",
     "            elif clicks==3:\n",
     "                click_list.append((x,y))\n",
+    "\n",
+    "                PList = []\n",
+    "                for y in click_list:\n",
+    "                    p=Point.fromEuclid(y[0],y[1])\n",
+    "                    PList.append(p)\n",
+    "                Tri=Triangle.fromVertices(PList)\n",
+    "                global delta\n",
+    "                delta = Tri.approx()\n",
+    "\n",
     "                g.children.clear()\n",
     "                draw_delta_neigbourhood_twosides(click_list,delta)\n",
     "                draw_thin_triangle(click_list)\n",
@@ -111,8 +141,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.0 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
